// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple examples 1`] = `
<div>
  <div
    className="code-block-bar-default  css-h28xly-CodeBlockBar e112hlxu5"
  >
    <div
      className="css-1tafalo-BarItems e112hlxu3"
    >
      <div
        className=" css-14mys1s-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-o2aeqk-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-1ap8b8q-ValueContainer"
          >
            <div
              className=" css-1khq0o6-singleValue"
            >
              PHP
            </div>
            <input
              aria-autocomplete="list"
              aria-expanded={false}
              aria-haspopup={true}
              aria-readonly={true}
              className="css-mohuvp-dummyInput-DummyInput"
              disabled={false}
              id="react-select-2-input"
              inputMode="none"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              role="combobox"
              tabIndex={0}
              value=""
            />
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              className=" css-1uei4ir-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              className=" css-1m7k5ev-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                height={12}
                width={7}
              />
            </div>
          </div>
        </div>
      </div>
      <button
        className="css-1al8qxm-CodeBlockButton e112hlxu2"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        copy
         
        <svg />
      </button>
      <button
        autoFocus={false}
        className="css-1al8qxm-CodeBlockButton e112hlxu2"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        expand 
        <svg
          height={16}
          width={16}
        />
      </button>
    </div>
  </div>
  <div
    className="code-block-default css-rz54st-CodeBlockContent e112hlxu0"
  >
    <pre>
      <code
        className="language-php"
        dangerouslySetInnerHTML={
          {
            "__html": "<span class="hljs-variable">$foo</span> = <span class="hljs-string">&quot;bar&quot;</span>",
          }
        }
      />
    </pre>
  </div>
</div>
`;

exports[`single example 1`] = `
<div>
  <div
    className="code-block-bar-default  css-h28xly-CodeBlockBar e112hlxu5"
  >
    <div
      className="css-1tafalo-BarItems e112hlxu3"
    >
      <div
        className="css-1vovl9e-BarText e112hlxu1"
      >
        javascript
      </div>
      <button
        className="css-1al8qxm-CodeBlockButton e112hlxu2"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        copy
         
        <svg />
      </button>
      <button
        autoFocus={false}
        className="css-1al8qxm-CodeBlockButton e112hlxu2"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        expand 
        <svg
          height={16}
          width={16}
        />
      </button>
    </div>
  </div>
  <div
    className="code-block-default css-rz54st-CodeBlockContent e112hlxu0"
  >
    <pre>
      <code
        className="language-javascript"
        dangerouslySetInnerHTML={
          {
            "__html": "<span class="hljs-keyword">const</span> foo = <span class="hljs-string">&quot;bar&quot;</span>;",
          }
        }
      />
    </pre>
  </div>
</div>
`;

exports[`single example with title 1`] = `
<div>
  <div
    className="code-block-bar-default title css-h28xly-CodeBlockBar e112hlxu5"
  >
    <div
      className="css-1v0t4mu-BarTitle e112hlxu4"
    >
      Title goes here
    </div>
    <div
      className="css-1tafalo-BarItems e112hlxu3"
    >
      <div
        className="css-1vovl9e-BarText e112hlxu1"
      >
        javascript
      </div>
      <button
        className="css-1al8qxm-CodeBlockButton e112hlxu2"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        copy
         
        <svg />
      </button>
      <button
        autoFocus={false}
        className="css-1al8qxm-CodeBlockButton e112hlxu2"
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        expand 
        <svg
          height={16}
          width={16}
        />
      </button>
    </div>
  </div>
  <div
    className="code-block-default css-rz54st-CodeBlockContent e112hlxu0"
  >
    <pre>
      <code
        className="language-javascript"
        dangerouslySetInnerHTML={
          {
            "__html": "<span class="hljs-keyword">const</span> foo = <span class="hljs-string">&quot;bar&quot;</span>;",
          }
        }
      />
    </pre>
  </div>
</div>
`;
